# customresponses/transaction/transaction.go
@@ -1,0 +1,22 @@
+package transaction
+
+type TransactionCustomResponse struct {
+	Id              string      `json:"id"`
+	TotalPrice      int         `json:"totalPrice"`
+	TransactionDate string      `json:"transactionDate"`
+	UserName        string      `json:"userName"`
+	UserMobile      interface{} `json:"userMobile"`
+	UserEmail       interface{} `json:"userEmail"`
+}
+
+type ProductTransaction struct {
+	Name          string      `json:"name"`
+	Id            string      `json:"id"`
+	ImageUrl      interface{} `json:"imageUrl"`
+	Product       string      `json:"product"`
+	Price         int         `json:"price"`
+	Weight        int         `json:"weight"`
+	PerUnit       int         `json:"perUnit"`
+	Total         int         `json:"total"`
+	TransactionId string      `json:"transactionId"`
+}
