# requestBody/product_save_request.go
@@ -9,3 +9,23 @@ type ProductSaveRequest struct {
 	ImageUrl    string
 	Name        string
 }
+
+type TopProductSaveRequest struct {
+	Price       int64
+	Weight      uint
+	Category    string
+	PerUnit     int
+	Description string
+	ImageUrl    string
+	Name        string
+}
+
+type RcmdProductSaveRequest struct {
+	Price       int64
+	Weight      uint
+	Category    string
+	PerUnit     int
+	Description string
+	ImageUrl    string
+	Name        string
+}
